# rust-axum-mongo-example

./: .env  .env.sample  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: test.yml
mock/mongo/initdb.d/: 1-init.js  2-init.sh  users.json
mongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--8201822018176835948.wt  collection-2--8201822018176835948.wt  collection-7--8201822018176835948.wt  index-1--8201822018176835948.wt  index-3--8201822018176835948.wt  index-8--8201822018176835948.wt  index-9--8201822018176835948.wt  sizeStorer.wt
mongo/.mongodb/mongosh/: 639b128d3240e6500c6c687b_log  639b128e1ea9e0f2a70dbc52_log  config
mongo/diagnostic.data/: metrics.2022-12-15T12-26-53Z-00000  metrics.2022-12-15T12-27-04Z-00000  metrics.interim
rust-axum-adapter/: Cargo.toml
rust-axum-adapter/src/: lib.rs  modules.rs
rust-axum-adapter/src/model/: user.rs
rust-axum-adapter/src/persistence/: mongodb.rs
rust-axum-adapter/src/repository/: health_check.rs  mod.rs  user.rs
rust-axum-app/: Cargo.toml
rust-axum-app/src/model/: user.rs
rust-axum-app/src/usecase/: health_check.rs  mod.rs  user.rs
rust-axum-driver/: Cargo.toml
rust-axum-driver/src/: add_numbers.rs  lib.rs
rust-axum-driver/src/config/: mod.rs
rust-axum-driver/src/model/: mod.rs  user.rs
rust-axum-driver/src/module/: mod.rs
rust-axum-driver/src/route/: health.rs
rust-axum-driver/src/routes/: health.rs
rust-axum-driver/src/routes/user/: user.rs
rust-axum-driver/src/startup/: mod.rs
rust-axum-kernel/: Cargo.toml
rust-axum-kernel/src/model/: mod.rs  user.rs
rust-axum-kernel/src/repository/: user.rs
rust-axum-mongo-example-adapter/: Cargo.toml
rust-axum-mongo-example-app/: Cargo.toml
rust-axum-mongo-example-driver/: Cargo.toml
src/: main.rs
