[package]
name = "rust-axum-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-axum-kernel = { path = "../rust-axum-kernel" }
anyhow = "1.0.58"
async-trait = "0.1.56"
serde = { version = "1.0.140", features = ["derive"] }

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["tokio-runtime"]