[package]
name = "rust-axum-app"
version = "0.1.0"
edition = "2021"


[dependencies]
rust-axum-kernel = { path = "../rust-axum-kernel" }
rust-axum-adapter = { path = "../rust-axum-adapter" }
axum = "0.6.11"
anyhow = "1.0.58"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde = { version = "1.0.136", features = ["derive"] }
mongodb = "2.3.1"