[package]
name = "rust-axum-app"
version = "0.1.0"
edition = "2021"


[dependencies]
rust-axum-kernel = { path = "../rust-axum-kernel" }
rust-axum-adapter = { path = "../rust-axum-adapter" }
axum = "0.6.20"
anyhow = "1.0.75"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version="0.3.17", features = ["env-filter"] }
serde = { version = "1.0.190", features = ["derive"] }