[package]
name = "rust-axum-driver"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-axum-kernel = { path = "../rust-axum-kernel" }
rust-axum-app = { path = "../rust-axum-app" }
rust-axum-adapter = { path = "../rust-axum-adapter" }
axum = "0.6.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde = { version = "1.0.136", features = ["derive"] }
envy = "0.4"