[package]
name = "rust-axum-mongo-example-driver"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-axum-mongo-example-kernel = { path = "../rust-axum-mongo-example-kernel" }
rust-axum-mongo-example-app = { path = "../rust-axum-mongo-example-app" }
rust-axum-mongo-example-adapter = { path = "../rust-axum-mongo-example-adapter" }
axum = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde = { version = "1.0.136", features = ["derive"] }
mongodb = "2.3.1"